--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,48 @@
-* {font-family: Arial, Helvetica, sans-serif;};
+main {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0 auto;
+    width: 1200px;
+    display: flex;
+    flex-direction: column;
+    text-transform: uppercase;
+    font-weight: bold;
+    
+}
 
-.wrapper {
-    display: grid;
-    width: auto;
-    margin: ;
-};
+.title {
+    text-align: center;
+}
+
+.button-menu {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+}
+
+.button {
+    width: 50%;
+    margin: 5px;
+    padding: 15px;
+    color: azure;
+    text-align: center;
+    background-color: darkblue;
+    border: 2px solid darkblue;
+}
+
+.button:hover {
+    color: lightblue;
+    background-color: white;
+}
+
+h3 {
+    font-weight: 400;
+}
+
+.dropdown {
+    width: 20%;
+}
+
+.card {
+    display: flex;
+    
+}
