--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ main {
     flex-direction: column;
     text-transform: uppercase;
     font-weight: bold;
-    
+    color: azure;
 }
 
 .title {
@@ -23,10 +23,9 @@ main {
     width: 50%;
     margin: 5px;
     padding: 15px;
-    color: azure;
     text-align: center;
-    background-color: darkblue;
-    border: 2px solid darkblue;
+    background-color: #104575;
+    border: 2px solid #104575;
 }
 
 .button:hover {
@@ -44,5 +43,17 @@ h3 {
 
 .card {
     display: flex;
-    
+    flex-flow: column nowrap;
+    justify-content: center;
+    background-color: #104575;
+}
+
+.icon {
+    margin: 0 auto;
+    width: 50px;
+}
+
+h2,h3 {
+    margin-top: 0;
+    text-align: center;
 }
