Added additional cards

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 main {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0 auto;
-    width: 1200px;
+    width: 800px;
     display: flex;
     flex-direction: column;
     text-transform: uppercase;
@@ -11,11 +11,12 @@ main {
 
 .title {
     text-align: center;
+    font-size: small;
 }
 
 .button-menu {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row;
     justify-content: space-between;
 }
 
@@ -38,13 +39,16 @@ h3 {
 }
 
 .dropdown {
-    width: 20%;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
 }
 
 .card {
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: column;
     justify-content: center;
+    padding: 5px 30px;
     background-color: #104575;
 }
 
@@ -56,4 +60,5 @@ h3 {
 h2,h3 {
     margin-top: 0;
     text-align: center;
+    font-size: medium;
 }
