--- a/styles.css
+++ b/styles.css
@@ -1,64 +1,73 @@
 main {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0 auto;
-    width: 800px;
-    display: flex;
-    flex-direction: column;
-    text-transform: uppercase;
-    font-weight: bold;
-    color: azure;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  width: 800px;
+  display: flex;
+  flex-direction: column;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: azure;
 }
 
 .title {
-    text-align: center;
-    font-size: small;
+  text-align: center;
+  font-size: small;
+  box-shadow: 2px 3px 10px #555;
 }
 
 .button-menu {
-    display: flex;
-    flex-flow: row;
-    justify-content: space-between;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
 }
 
 .button {
-    width: 50%;
-    margin: 5px;
-    padding: 15px;
-    text-align: center;
-    background-color: #104575;
-    border: 2px solid #104575;
+  width: 50%;
+  margin: 5px;
+  padding: 15px;
+  text-align: center;
+  background-color: #104575;
+  border: 2px solid transparent;
 }
 
 .button:hover {
-    color: lightblue;
-    background-color: white;
+  color: #104575;
+  background-color: white;
+  border-bottom: 2px solid #104575;
+}
+
+.button:active {
+  color: lightblue;
+  background-color: white;
+  border: 2px solid #104575;
 }
 
 h3 {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .dropdown {
-    display: flex;
-    flex-flow: row;
-    justify-content: space-between;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
 }
 
 .card {
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    padding: 5px 30px;
-    background-color: #104575;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  padding: 5px 30px;
+  background-color: #104575;
 }
 
 .icon {
-    margin: 0 auto;
-    width: 50px;
+  margin: 0 auto;
+  width: 50px;
 }
 
-h2,h3 {
-    margin-top: 0;
-    text-align: center;
-    font-size: medium;
+h2,
+h3 {
+  margin-top: 0;
+  text-align: center;
+  font-size: medium;
 }
