--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,25 @@
+* {
+  --color-lightblue: #f8f8f8;
+  --color-darkblue: #104575;
+  --color-shadow: #555;
+}
+
 main {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 auto;
+  padding: 50px 30px;
   width: 800px;
   display: flex;
   flex-direction: column;
   text-transform: uppercase;
   font-weight: bold;
   color: azure;
+  background-color: var(--color-lightblue);
 }
 
 .title {
   text-align: center;
   font-size: small;
-  box-shadow: 2px 3px 10px #555;
 }
 
 .button-menu {
@@ -26,20 +33,21 @@ main {
   margin: 5px;
   padding: 15px;
   text-align: center;
-  background-color: #104575;
+  background-color: var(--color-darkblue);
   border: 2px solid transparent;
+  box-shadow: 1px 1px 5px var(--color-shadow);
 }
 
 .button:hover {
-  color: #104575;
-  background-color: white;
-  border-bottom: 2px solid #104575;
+  color: var(--color-darkblue);
+  background-color: var(--color-lightblue);
+  border-bottom: 2px solid var(--color-darkblue);
 }
 
 .button:active {
-  color: lightblue;
+  color: #2a7ea7;
   background-color: white;
-  border: 2px solid #104575;
+  border: 2px solid var(--color-darkblue);
 }
 
 h3 {
@@ -57,7 +65,10 @@ h3 {
   flex-flow: column;
   justify-content: center;
   padding: 5px 30px;
-  background-color: #104575;
+  background-color: var(--color-darkblue);
+  box-shadow: 1px 1px 5px var(--color-shadow);
+  border: none;
+  cursor: pointer;
 }
 
 .icon {
