--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ h3 {
   font-weight: 400;
 }
 
-.dropdown {
+.wrapper {
   display: flex;
   flex-flow: row;
   justify-content: space-between;
@@ -81,4 +81,37 @@ h3 {
   margin-top: 0;
   text-align: center;
   font-size: medium;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .card {
+  background-color: var(--color-lightblue);
 }
