--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,15 @@
-* {
+:root {
   --color-lightblue: #f8f8f8;
   --color-darkblue: #104575;
   --color-shadow: #555;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 main {
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0 auto;
   padding: 50px 30px;
-  width: 800px;
+  width: 70vw;
   display: flex;
   flex-direction: column;
   text-transform: uppercase;
@@ -33,25 +34,25 @@ main {
   margin: 5px;
   padding: 15px;
   text-align: center;
-  background-color: var(--color-darkblue);
+  background-color: #072a4b;
   border: 2px solid transparent;
   box-shadow: 1px 1px 5px var(--color-shadow);
 }
 
 .button:hover {
+  outline: 2px solid var(--color-darkblue);
   color: var(--color-darkblue);
   background-color: var(--color-lightblue);
-  border-bottom: 2px solid var(--color-darkblue);
 }
 
 .button:active {
   color: #2a7ea7;
-  background-color: white;
-  border: 2px solid var(--color-darkblue);
+  border-bottom: 2px solid var(--color-darkblue);
+  outline: none;
 }
 
 h3 {
-  font-weight: 400;
+  font-weight: normal;
 }
 
 .wrapper {
