--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,13 @@
   --color-shadow: #555;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 18px;
 }
 
 main {
   margin: 0 auto;
   padding: 50px 30px;
-  width: 70vw;
+  width: 90vw;
   display: flex;
   flex-direction: column;
   text-transform: uppercase;
@@ -21,6 +22,13 @@ main {
 .title {
   text-align: center;
   font-size: small;
+  padding-top: 50px;
+  background-color: var(--color-darkblue);
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+}
+
+.title h1 {
+  font-size: 1.3rem;
 }
 
 .button-menu {
@@ -29,7 +37,7 @@ main {
   justify-content: space-between;
 }
 
-.button {
+.button-menu .button {
   width: 50%;
   margin: 5px;
   padding: 15px;
@@ -51,14 +59,23 @@ main {
   outline: none;
 }
 
+h2,
 h3 {
-  font-weight: normal;
+  margin-top: 0;
+  text-align: center;
+  font-size: medium;
 }
 
-.wrapper {
-  display: flex;
-  flex-flow: row;
-  justify-content: space-between;
+h3 {
+  font-weight: normal;
+  font-size: 0.7rem;
+}
+
+.dropdown-wrapper {
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-rows: 1fr;
+  grid-column-gap: 10px;
 }
 
 .card {
@@ -75,13 +92,6 @@ h3 {
 .icon {
   margin: 0 auto;
   width: 50px;
-}
-
-h2,
-h3 {
-  margin-top: 0;
-  text-align: center;
-  font-size: medium;
 }
 
 .dropdown {
@@ -115,4 +125,26 @@ h3 {
 
 .dropdown:hover .card {
   background-color: var(--color-lightblue);
+}
+
+@media screen and (max-width: 768px) {
+  :root {
+    font-size: 14px;
+  }
+
+  .dropdown-wrapper {
+    grid-auto-flow: row;
+    grid-row-gap: 10px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .button-menu {
+    flex-flow: column;
+  }
+
+  .button-menu .button {
+    flex: 1;
+    width: auto;
+  }
 }
